shrink comic dialog margins

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -4,7 +4,7 @@ layout: default
 
 <main>
 	<h3 class="title --content">{{ page.title }}</h3>
-	<div class="comic--wide --content">
+	<div class="comic--wide">
 		{% for image in page.images %}
 		<div class="comic--wide__panel">
 			<img class="comic--wide__panel__img" src="{{ site.url }}{{ image }}">
