--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -13,3 +13,31 @@
 	})();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+<button id="comments-scroll" class="snackbar">
+	<span class="snackbar__title">Comments</span>
+	<i class="snackbar__icon material-icons">arrow_drop_down</i>
+</button>
+<script>
+	var scrollCommentsElement = document.getElementById("comments-scroll");
+	scrollCommentsElement.addEventListener("click", function() {
+		var scrollingElement = document.scrollingElement || document.body;
+		scrollingElement.scrollTop = scrollingElement.scrollHeight;
+	});
+
+	window.onscroll = function() {
+		var scrollingElement = document.scrollingElement || document.body;
+		if (scrollingElement) {
+			var scrollingHeight = scrollingElement.scrollHeight || scrollingElement.offsetHeight;
+			var windowHeight = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+			if (scrollingHeight - scrollingElement.scrollTop - windowHeight > windowHeight) {
+				scrollCommentsElement.setAttribute("active", true);
+				return;
+			}
+		}
+
+		scrollCommentsElement.removeAttribute("active");
+	};
+
+	window.onscroll();
+</script>
