--- a/css/elements/snackbar.scss
+++ b/css/elements/snackbar.scss
@@ -7,8 +7,7 @@
 	right: 0;
 	border: none;
 	outline: none;
-	background-color: #424242;
-	background-color: var(--normal-color-text);
+	background-color: rgba(0, 0, 0, 0.9);
 	color: #FFFFFF;
 	color: var(--normal-background);
 
