--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -57,8 +57,8 @@
 		scrollingElement.scrollTop = scrollingElement.scrollHeight;
 	});
 
-	window.onscroll = function() {
-		var scrollingElement = getScrollingElement();
+	window.onscroll = function(e) {
+		var scrollingElement = (e && e.target) || getScrollingElement();
 		if (scrollingElement) {
 			var scrollingHeight = scrollingElement.scrollHeight || scrollingElement.offsetHeight;
 			if (scrollingHeight - scrollingElement.scrollTop > 2 * getWindowHeight()) {
