add comments button to each comment, preset disqus height for pre-loading, etc

--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -12,4 +12,8 @@
 			</p>
 		</div>
 	</div>
+	<a class="link link--comic --mobile" onclick="onClick(this, '{{ include.comic.url }}#disqus_thread', '{{ include.comic.slug }}');">
+		<span>Comments&nbsp;&nbsp;</span>
+		<i class="material-icons">comment</i>
+	</a>
 </a>
