--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<div id="disqus_thread" class="--content"></div>
+<div id="disqus_thread" class="--content" style="min-height: 400px;"></div>
 <script>
 	var disqus_config = function() {
 		this.page.url = "{{ site.url }}{{ page.url }}";
