--- a/css/styles.scss
+++ b/css/styles.scss
@@ -134,3 +134,21 @@ main {
 html {
 	scroll-behavior: smooth;
 }
+
+.--desktop {
+	display: none;
+}
+
+.--mobile {
+	display: block;
+}
+
+@media (min-width: 1000px) {
+	.--desktop {
+		display: block;
+	}
+
+	.--mobile {
+		display: none;
+	}
+}
