--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<main>
+<main class="--frame">
 	<h3 class="title --content">{{ page.title }}</h3>
 	<div class="comic--wide">
 		{% for image in page.images %}
