--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 	{{ content }}
+	<script>
+		if (navigator.vendor.match(/apple/i)) {
+			document.body.setAttribute("webkit", true);
+		}
+	</script>
 </body>
 </html>
 	
