--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -65,6 +65,10 @@
 	animation-timing-function: ease-out;
 }
 
+.dialog__content > iframe {
+	border-radius: 8px;
+}
+
 .dialog--hidden > .dialog__content {
 	animation-direction: reverse;
 }
