--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -59,14 +59,15 @@
 	width: 100%;
 	height: 90%;
 	background-color: #FFF;
-	border-radius: 8px;
 	animation-name: dialog;
 	animation-duration: .25s;
 	animation-timing-function: ease-out;
 }
 
-.dialog__content > iframe {
+.dialog__content, .dialog__content > iframe {
 	border-radius: 8px;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
 }
 
 .dialog--hidden > .dialog__content {
@@ -97,8 +98,11 @@
 	.dialog__content {
 		position: unset;
 		height: 100%;
-		border-radius: 8px;
 		box-shadow: 0 0.4em 3.2em rgba(0, 0, 0, 0.33);
+	}
+
+	.dialog__content, .dialog__content > iframe {
+		border-radius: 8px;
 	}
 
 	@keyframes dialog {
