change snackbar z-index

--- a/css/elements/snackbar.scss
+++ b/css/elements/snackbar.scss
@@ -15,6 +15,7 @@
 	vertical-align: middle;
 	height: 42px;
 	line-height: 42px;
+	z-index: 100;
 
 	visibility: hidden;
 	transform: translateY(100%);
