set style accent to an interesting shade of green

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,12 +19,12 @@
 	--normal-outline-dark: #000000;
 	--normal-focus: rgba(0, 0, 0, 0.1);
 	--normal-focus-light: rgba(0, 0, 0, 0.03);
-	--accent-color: #0091EA;
-	--accent-color-text: #0067A4;
-	--accent-background: #0091EA;
-	--accent-outline: #0091EA;
-	--accent-outline-fade: rgba(0, 72, 117, 0.3);
-	--accent-outline-fade2: rgba(0, 72, 117, 0.5);
+	--accent-color: #095427;
+	--accent-color-text: #205e37;
+	--accent-background: #095427;
+	--accent-outline: #063519;
+	--accent-outline-fade: rgba(24, 53, 28, 0.3);
+	--accent-outline-fade2: rgba(24, 53, 28, 0.5);
 	--accent-inverse: #FFFFFF;
 	--image-brightness-focus: 0;
 }
