implement dark theme setting

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -22,4 +22,8 @@ layout: default
 	{% include comments.html %}
 </main>
 
+<div style="display: none;">
+    {% include theme-switch.html %}
+</div>
+
 {% include comments-jump.html %}
