--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,6 +18,8 @@ layout: default
 	</div>
 </main>
 
+{% include theme-switch.html %}
+
 <footer class="footer">
 	{% include paginator.html pages=site.pages hash=page.hash %}
 </footer>
