--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -28,12 +28,13 @@
 	height: 48px;
 
 	background-color: #FFFFFF;
+	background-color: var(--normal-background);
 	border-radius: 50%;
-	transition: background-color .25s;
+	transition: background-color .25s, opacity .25s;
 }
 
 .dialog__close:hover {
-	background-color: rgba(255, 255, 255, 0.8);
+    opacity: 0.8;
 }
 
 .dialog__close > .material-icons {
@@ -41,13 +42,17 @@
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
+	color: #FFF;
+	color: var(--normal-color-focus);
 	
 	display: block;
-	transition: transform .25s;
+	transition: transform .25s, color .25s;
 }
 
 .dialog__close:hover > .material-icons {
 	transform: translateX(-50%) translateY(-50%) rotate(90deg);
+	color: #205E37;
+	color: var(--accent-color-text);
 }
 
 .dialog__content {
