--- a/css/elements/snackbar.scss
+++ b/css/elements/snackbar.scss
@@ -8,6 +8,7 @@
 	border: none;
 	outline: none;
 	background-color: rgba(0, 0, 0, 0.9);
+	background-color: var(--normal-overlay-inverse);
 	color: #FFFFFF;
 	color: var(--normal-background);
 
