fix default color values

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -98,7 +98,7 @@ p {
 a {
 	cursor: pointer;
 	outline: none;
-	color: #0091EA;
+	color: #205E37;
 	color: var(--accent-color-text);
 	transition: color .25s;
 	-moz-transition: color .25s;
