refactor attribute names for sorting/etc

--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -1,4 +1,4 @@
-<a class="paper__item comic" style="grid-area: {{ include.rowStart }} / {{ include.colStart }} / {{ include.rowEnd }} / {{ include.colEnd }};" data-url="{{ include.comic.url }}" data-slug="{{ include.comic.slug }}" onclick="onClick(this, '{{ include.comic.url }}', '{{ include.comic.slug }}');" href="{{ site.url }}{{ include.comic.url }}">
+<a class="paper__item comic" style="grid-area: {{ include.rowStart }} / {{ include.colStart }} / {{ include.rowEnd }} / {{ include.colEnd }};" data-url="{{ include.comic.url }}" data-slug="{{ include.comic.title }}" onclick="onClick(this, '{{ include.comic.url }}', '{{ include.comic.number }}');" href="{{ site.url }}{{ include.comic.url }}">
 	<div class="comic__container">
 		<div class="comic__images">
 			{% for image in include.comic.images %}
@@ -12,7 +12,7 @@
 			</p>
 		</div>
 	</div>
-	<a class="link link--comic --mobile" onclick="onClick(this, '{{ include.comic.url }}#disqus_thread', '{{ include.comic.slug }}');">
+	<a class="link link--comic --mobile" onclick="onClick(this, '{{ include.comic.url }}#disqus_thread', '{{ include.comic.number }}');">
 		<span>Comments&nbsp;&nbsp;</span>
 		<i class="material-icons">comment</i>
 	</a>
