--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,16 @@
 <meta charset="utf-8">
 
-<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+{% assign title = site.name %}
+{% if page.title %}{% assign title = page.title %}{% endif %}
+{% if page.name %}{% assign title = page.name %}{% endif %}
+
+{% assign description = site.description %}
+{% if page.description %}{% assign description = page.description %}{% endif %}
+
+<meta name="description" content="{{ description }}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=12.0, user-scalable=yes"/>
 <meta name="generator" content="{{ site.name }}">
-<title>{{ page.title }}</title>
+<title>{{ title }}</title>
 
 <meta name="theme-color" content="#FFFFFF">
 <meta name="mobile-web-app-capable" content="yes">
@@ -29,3 +36,12 @@
 <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="{{ site.url }}/css/styles.css" rel="stylesheet">
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:creator" content="@TheNewsPanels">
+<meta name="og:url" content="{{ site.url }}{{ page.url }}">
+<meta name="og:title" content="{{ title }}">
+<meta name="og:description" content="{{ description }}">
+{% if page.images %}
+<meta name="twitter:image" content="{{ site.url }}{{ page.images[0] }}">
+{% endif %}
