--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
 {% assign title = site.name %}
 {% if page.title %}{% assign title = page.title %}{% endif %}
 {% if page.name %}{% assign title = page.name %}{% endif %}
+{% if include.title %}{% assign title = include.title %}{% endif %}
 
 {% assign image = site.icon %}
 {% if page.images %}{% assign image = page.images[0] %}{% endif %}
@@ -40,7 +41,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="{{ site.url }}/css/styles.css" rel="stylesheet">
 
+{% if page.images %}
+<meta name="twitter:card" content="summary_large_image">
+{% else %}
 <meta name="twitter:card" content="summary">
+{% endif %}
 <meta name="twitter:creator" content="@TheNewsPanels">
 <meta name="twitter:site" content="@TheNewsPanels">
 <meta name="twitter:title" content="{{ title }}">
@@ -50,6 +55,6 @@
 <meta name="og:url" content="{{ site.url }}{{ page.url }}">
 <meta name="og:title" content="{{ title }}">
 <meta name="og:description" content="{{ description }}">
-<meta name="og:image" content="{{ image }}">
+<meta name="og:image" content="{{ site.url }}{{ image }}">
 <meta name="og:locale" content="en_US">
 <meta name="og:site_name" content="{{ site.name }}">
