--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 {% if page.description %}{% assign description = page.description %}{% endif %}
 
 <meta name="description" content="{{ description }}">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=12.0, user-scalable=yes"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <meta name="generator" content="{{ site.name }}">
 <title>{{ title }}</title>
 
