temporarily disable safari detection

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 		}
 
 		if (isSafari()) {
-			document.body.setAttribute("webkit", true);
+			//document.body.setAttribute("webkit", true);
 		}
 	</script>
 </body>
