add adsense things

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,3 +58,11 @@
 <meta name="og:image" content="{{ site.url }}{{ image }}">
 <meta name="og:locale" content="en_US">
 <meta name="og:site_name" content="{{ site.name }}">
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-4481485119864993",
+        enable_page_level_ads: true
+    });
+</script>
