add banner border line

--- a/css/elements/banner.scss
+++ b/css/elements/banner.scss
@@ -14,6 +14,7 @@
 	justify-content: center;
 	font-size: calc(3vw + .6em);
 	font-weight: bold;
+	border-bottom: 3px solid #000000;
 }
 
 .banner__icon {
