--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,8 +46,8 @@
 {% else %}
 <meta name="twitter:card" content="summary">
 {% endif %}
-<meta name="twitter:creator" content="@TheNewsPanels">
-<meta name="twitter:site" content="@TheNewsPanels">
+<meta name="twitter:creator" content="{{ site.twitter }}">
+<meta name="twitter:site" content="{{ site.twitter }}">
 <meta name="twitter:title" content="{{ title }}">
 <meta name="twitter:description" content="{{ description }}">
 <meta name="twitter:image" content="{{ site.url }}{{ image }}">
