--- a/_includes/theme-switch.html
+++ b/_includes/theme-switch.html
@@ -1,4 +1,4 @@
-<p id="theme" class="--content" style="float: right; user-select: none;"><small>Dark Theme: <a id="themeText">off</a></small></p>
+<span id="theme" style="user-select: none;">Dark Theme: <a id="themeText">off</a></span>
 <script type="text/javascript">
     const _themeElement = document.getElementById("theme");
     const _themeTextElement = document.getElementById("themeText");
