--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,11 +20,7 @@ layout: default
 	</div>
 </main>
 
-<footer class="footer">
-	{% include paginator.html pages=site.pages number=page.number %}
-</footer>
-
-{% include theme-switch.html %}
+{% include footer.html paginator=true paginator_pages=site.pages paginator_number=page.number %}
 
 <div id="comic_dialog" class="dialog dialog--hidden">
 	<a id="comic_close" class="dialog__close"><i class="material-icons">close</i></a>
