--- a/css/elements/banner.scss
+++ b/css/elements/banner.scss
@@ -15,6 +15,7 @@
 	font-size: calc(3vw + .6em);
 	font-weight: bold;
 	border-bottom: 3px solid #000000;
+	border-bottom: 3px solid var(--normal-color-focus);
 }
 
 .banner__icon {
