--- a/css/elements/footer.scss
+++ b/css/elements/footer.scss
@@ -1,7 +1,9 @@
 .footer {
 	clear: both;
-	padding-left: 2vw;
-	padding-right: 2vw;
+	padding-left: 4vw;
+	padding-right: 4vw;
+	padding-top: 20px;
+	padding-bottom: 80px;
 	bottom: 0;
 	left: 0;
 	right: 0;
