--- a/css/styles.scss
+++ b/css/styles.scss
@@ -137,11 +137,12 @@ a:focus {
 @import "elements/img.scss";
 @import "elements/iframe.scss";
 @import "elements/banner.scss";
-@import "elements/snackbar.scss";
 @import "elements/comic.scss";
 @import "elements/dialog.scss";
 @import "elements/paper.scss";
 @import "elements/paginator.scss";
+@import "elements/rtable.scss";
+@import "elements/snackbar.scss";
 @import "elements/title.scss";
 @import "elements/link.scss";
 @import "elements/footer.scss";
