--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,17 @@
 <meta name="og:locale" content="en_US">
 <meta name="og:site_name" content="{{ site.name }}">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-80302642-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-80302642-3');
+</script>
+
+{% comment %}
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
     (adsbygoogle = window.adsbygoogle || []).push({
@@ -66,3 +77,4 @@
         enable_page_level_ads: true
     });
 </script>
+{% endcomment %}
