add info to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,16 @@
     <hr>
     <p class="rtable">
         <span>
+            <b>About...</b><br>
+            <a href="{{ site.url }}/about/contact/">Contact Us</a><br>
+            <a href="{{ site.url }}/about/privacy/">Privacy Policy</a>
+        </span>
+        <span>
             <b>Follow us on...</b><br>
             <a href="https://twitter.com/{{ site.twitter }}">Twitter ({{ site.twitter }})</a><br>
             <a href="https://instagram.com/{{ site.instagram }}">Instagram (@{{ site.instagram }})</a>
         </span>
+        <span></span>
         <span>
             {% include theme-switch.html %}
         </span>
