--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
 {% assign title = site.name %}
 {% if page.title %}{% assign title = site.name | append: ' - ' | append: page.title %}{% endif %}
 {% if page.name %}{% assign title = site.name | append: ' - ' | append: page.name %}{% endif %}
+{% if page.head-title %}{% assign title = site.name | append: ' - ' | append: page.head-title %}{% endif %}
 {% if include.title %}{% assign title = include.title %}{% endif %}
 
 {% assign image = site.icon %}
