--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 {% assign title = site.name %}
 {% if page.title %}{% assign title = site.name | append: ' - ' | append: page.title %}{% endif %}
 {% if page.name %}{% assign title = site.name | append: ' - ' | append: page.name %}{% endif %}
-{% if page.head-title %}{% assign title = site.name | append: ' - ' | append: page.head-title %}{% endif %}
+{% if page.page-title %}{% assign title = site.name | append: ' - ' | append: page.page-title %}{% endif %}
 {% if include.title %}{% assign title = include.title %}{% endif %}
 
 {% assign image = site.icon %}
@@ -11,6 +11,7 @@
 
 {% assign description = site.description %}
 {% if page.description %}{% assign description = page.description %}{% endif %}
+{% if page.page-desc %}{% assign description = page.page-desc %}{% endif %}
 
 <meta name="description" content="{{ description }}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=12.0, user-scalable=yes"/>
