--- a/css/styles.scss
+++ b/css/styles.scss
@@ -179,6 +179,11 @@ body[webkit] main.--frame {
 	z-index: 2;
 }
 
+.--sr-only {
+	display: none;
+	visibility: hidden;
+}
+
 .--desktop {
 	display: none;
 }
