implement pagejs routing for comic dialog

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet">
 <link href="{{ site.url }}/css/styles.css" rel="stylesheet">
 
 {% if page.images %}
